--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 #root {
   text-align: center;
+  
 }
 
 .background {
@@ -51,8 +52,6 @@
 
 :root {
   font-family: "Roboto", sans-serif;
-  font-weight: 500;
-  font-style: normal;
   
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -61,13 +60,7 @@
 }
 
 a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-
-a:hover {
-  color: #535bf2;
+  text-decoration: none;
 }
 
 body {
