--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -3,12 +3,38 @@
     height: 4rem;
     background-color: #f0f0f0;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     align-items: center;
 }
 
 .left {
     display: flex;
     justify-content: space-between;
-    
+
+    img {
+        margin-left: 2.5rem;
+    }
+}
+
+.nav {
+    display: flex;
+    justify-content: space-between;
+    border: 1px solid rgb(90, 116, 117);
+    border-radius: 1.5rem;
+    padding: 0.5rem 1.5rem;
+    margin: 0 2.5rem;
+
+    a {
+        font-size: 1.25rem;
+        padding: 0 1.5rem;
+        color: #5a7475;
+    }
+
+    &:last-child {
+        padding-right: 0;
+    }
+
+    &:first-child {
+        padding-left: 0;
+    }
 }
