--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,7 +1,7 @@
 .container {
     width: 24rem;
-    height: 26rem;
-    border-radius: 1rem;
+    height: 24.5rem;
+    border-radius: 1.5rem;
     background-color: white;
 
     h1 {
@@ -16,11 +16,39 @@
     width: 20rem;
 
     input {
-        height: 3rem;
+        background-color: transparent;
+        font-size: 1rem;
+        padding: 1rem;
+        height: 1.5rem;
         width: 100%;
         display: block;
-        max-width: 20rem;
+        max-width: 284px; /* поменять */
         border: 2px solid #5a7475;
         margin-bottom: 3rem;
     }
 }
+
+.btn {
+    text-align: right;
+
+    button {
+        margin-left: 1rem;
+    }
+}
+
+.inputContainer {
+    position: relative;
+
+    label {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        color: #5a7475;
+        transform: translate(16px, -8px);
+        background-color: white;
+        padding: 0 4px;
+    }
+}
+
+
