--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,6 +1,6 @@
 .header {
     width: 100%;
-    height: 4rem;
+    height: 4.5rem;
     background-color: #f0f0f0;
     display: flex;
     justify-content: space-between;
@@ -20,21 +20,18 @@
     display: flex;
     justify-content: space-between;
     border: 1px solid rgb(90, 116, 117);
-    border-radius: 1.5rem;
-    padding: 0.5rem 1.5rem;
+    border-radius: 1.75rem;
+    padding: 0.5rem 1rem;
     margin: 0 2.5rem;
 
     a {
-        font-size: 1.25rem;
+        font-size: 1.5rem;
         padding: 0 1.5rem;
         color: #5a7475;
     }
 
-    &:last-child {
-        padding-right: 0;
-    }
+}
 
-    &:first-child {
-        padding-left: 0;
-    }
+.right {
+    margin-right: 2.5rem;
 }
