updated header, responsive design

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -1,6 +1,6 @@
 .footer {
-    height: 1.5rem;
-    background-color: #343f49;
+    height: 1.75rem;
+    background-color: #273042;
     position: relative;
 
     p {
