--- a/src/App.css
+++ b/src/App.css
@@ -13,10 +13,6 @@
   grid-row-gap: 0px;
 }
 
-.grid-item {
-  padding: 6rem 8rem;
-}
-
 .div1 { 
   grid-area: 1 / 1 / 3 / 2; 
   background-color: #5a7475;
@@ -44,10 +40,11 @@
 }
 
 .content {
-  height: calc(100vh - 6rem);
+  height: calc(100vh - 6.25rem);
   display: flex;
   justify-content: center;
   align-items: center;
+  margin: 0 1rem;
 }
 
 :root {
@@ -69,4 +66,10 @@ body {
 
 h1, p{
   margin: 0;
+}
+
+@media (max-width: 721px) {
+  .content {
+    height: calc(100vh - 6.75rem);
+  }
 }
