--- a/src/components/Form/Form.module.css
+++ b/src/components/Form/Form.module.css
@@ -1,38 +1,48 @@
 .container {
-    width: 24rem;
+    width: 100%;
+    max-width: 20rem;
     height: 24.5rem;
     border-radius: 1.5rem;
     background-color: white;
+    padding: 0 2rem;
 
     h1 {
-        margin: 2rem;
+        margin: 2rem 0;
         text-align: start;
         color: #5a7475;
     }
 }
 
 .form {
-    margin: 0 2rem;
-    width: 20rem;
+    width: 100%;
+    max-width: 20rem;
 
     input {
+        box-sizing: border-box;
         background-color: transparent;
         font-size: 1rem;
         padding: 1rem;
-        height: 1.5rem;
+        height: 3.5rem;
         width: 100%;
         display: block;
-        max-width: 284px; /* поменять */
+        max-width: 20rem; 
         border: 2px solid #5a7475;
         margin-bottom: 3rem;
+        border-radius: 4px;
+
+        &:focus-visible {
+            outline: none;
+        }
     }
 }
 
 .btn {
     text-align: right;
+    width: 100%;
+    max-width: 20rem;
 
-    button {
-        margin-left: 1rem;
+    button:first-child {
+        margin-right: 1rem;
     }
 }
 
@@ -50,5 +60,13 @@
         padding: 0 4px;
     }
 }
+
+@media (max-width: 367px) {
+    .btn button {
+        padding: 0.5rem 1rem;
+    }
+    
+  }
+  
 
 
