--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -19,15 +19,31 @@
 .nav {
     display: flex;
     justify-content: space-between;
-    border: 1px solid rgb(90, 116, 117);
-    border-radius: 1.75rem;
-    padding: 0.5rem 1rem;
     margin: 0 2.5rem;
 
     a {
         font-size: 1.5rem;
-        padding: 0 1.5rem;
+        padding: 0.5rem 1.75rem;
         color: #5a7475;
+        border-top: 1px solid rgb(90, 116, 117);
+        border-bottom: 1px solid #5a7475;
+
+        &:first-child {
+            border-left: 1px solid #5a7475;
+            border-top-left-radius: 1.75rem;
+            border-bottom-left-radius: 1.75rem; 
+        }
+
+        &:last-child {
+            border-right: 1px solid #5a7475;
+            border-top-right-radius: 1.75rem;
+            border-bottom-right-radius: 1.75rem;
+        }
+    }
+
+    .selected {
+        background-color: #5a7475;
+        color: white;
     }
 
 }
@@ -35,3 +51,36 @@
 .right {
     margin-right: 2.5rem;
 }
+
+.menu {
+    display: none;
+    cursor: pointer;
+    border: 2px solid #5a7475;
+    border-radius: 1rem;
+    padding: 4px 4px 2px;
+    margin-right: 2.5rem;
+
+    img {
+        transform: rotate(90deg);
+    }
+}
+
+@media (max-width: 721px) {
+    .nav, .right {
+        display: none;
+    }
+
+    .header {
+        height: 5rem;
+    }
+
+    .menu {
+        display: block;
+    }
+
+    .left img {
+        width: 4.5rem;
+        height: 4.5rem;
+    }
+}
+
