--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -12,6 +12,8 @@
     justify-content: space-between;
 
     img {
+        width: 3rem;
+        height: 3rem;
         margin-left: 2.5rem;
     }
 }
@@ -38,6 +40,11 @@
             border-right: 1px solid #5a7475;
             border-top-right-radius: 1.75rem;
             border-bottom-right-radius: 1.75rem;
+        }
+
+        &:hover {
+            background-color: #5a7475;
+            color: white;
         }
     }
 
@@ -66,8 +73,25 @@
 }
 
 @media (max-width: 721px) {
-    .nav, .right {
+    .nav {
         display: none;
+        flex-direction: column;
+        position: absolute;
+        top: 5rem;
+        left: 0;
+        margin: 0;
+        z-index: 1;
+        width: 100vw;
+        max-width: 100%;
+        background-color: white;
+    }
+
+    .right {
+        display: none;
+    }
+
+    .menuNav {
+        display: flex;
     }
 
     .header {
