--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -1,26 +1,27 @@
 .header {
     width: 100%;
     height: 4.5rem;
+    position: relative;
     background-color: #f0f0f0;
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
 }
 
 .left {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
 
     img {
-        width: 3rem;
-        height: 3rem;
+        width: 4rem;
+        height: 4rem;
         margin-left: 2.5rem;
     }
 }
 
 .nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
     margin: 0 2.5rem;
 
     a {
@@ -36,7 +37,7 @@
             border-bottom-left-radius: 1.75rem; 
         }
 
-        &:last-child {
+        &:nth-child(3) {
             border-right: 1px solid #5a7475;
             border-top-right-radius: 1.75rem;
             border-bottom-right-radius: 1.75rem;
@@ -53,10 +54,10 @@
         color: white;
     }
 
-}
+    button {
+        margin-left: calc(100vw - 43.5rem);
+    }
 
-.right {
-    margin-right: 2.5rem;
 }
 
 .menu {
@@ -66,6 +67,7 @@
     border-radius: 1rem;
     padding: 4px 4px 2px;
     margin-right: 2.5rem;
+    margin-left: calc(100vw - 12rem);
 
     img {
         transform: rotate(90deg);
@@ -84,6 +86,16 @@
         width: 100vw;
         max-width: 100%;
         background-color: white;
+        border-bottom: 2px solid #5a7475;
+
+        a {
+            border: none;
+        }
+
+        button {
+            align-self: center;
+            margin: 0;
+        }
     }
 
     .right {
