--- a/src/App.css
+++ b/src/App.css
@@ -47,9 +47,15 @@
   margin: 0 1rem;
 }
 
+.loggedContent {
+  background-color: white;
+  width: 100%;
+  max-width: 400px;
+  height: 500px;
+}
+
 :root {
   font-family: "Roboto", sans-serif;
-  
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -62,10 +68,6 @@ a {
 
 body {
   margin: 0;
-}
-
-ul li {
-  list-style-type: none;
 }
 
 h1, p{
